--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@heroui/react": "^2.7.9",
     "@types/leaflet": "^1.9.18",
     "@types/leaflet-routing-machine": "^3.2.8",
+     "@tanstack/react-query": "^5.76.1",
     "framer-motion": "^12.15.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+     "react-error-boundary": "^6.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.6.1",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
