--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.9",
+    "@hookform/resolvers": "^5.2.0",
     "@tanstack/react-query": "^5.76.1",
     "@types/leaflet": "^1.9.18",
     "@types/leaflet-routing-machine": "^3.2.8",
@@ -26,6 +27,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.6.1",
     "react-router-dom": "^7.6.1",
+    "yup": "^1.6.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
